--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,18 +2,18 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Every day at midnight
-  workflow_dispatch:     # Allows manual run
+    - cron: "0 0 * * *"  # Every day
+  workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Generate GitHub contribution snake
+      - name: Generate the snake SVG
         uses: Platane/snk@v3
         with:
           github_user_name: 67u587989i86
@@ -26,4 +26,3 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
