--- a/snake.yml
+++ b/snake.yml
@@ -2,22 +2,24 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # every day at midnight
+    - cron: "0 0 * * *"  # Every day
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Generate Snake
-        uses: Platane/snk@master
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Generate the snake SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: 67u587989i86
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push to GitHub Pages
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
